<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_profiles"
        android:textSize="22sp"
        android:textColor="@color/black"/>
    <Button
        android:id="@+id/button_random_profiles"
        android:text="@string/random_profiles"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:backgroundTint="@color/normal_button"/>
    <TextView
        android:layout_marginTop="70dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_favorite_profiles"
        android:textSize="22sp"
        android:textColor="@color/black"/>
    <Button
        android:id="@+id/button_favorite_profiles"
        android:text="@string/favorite_profiles"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:backgroundTint="@color/normal_button"/>

</LinearLayout>