<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="68sp"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_width="64sp"
        android:layout_height="64sp"
        android:layout_margin="2sp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/profile_picture" />

    <TextView
        android:id="@+id/name_textview"
        android:layout_toEndOf="@+id/profile_picture"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="12dp"
        android:textSize="22sp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/gender_textview"
        android:layout_toEndOf="@+id/profile_picture"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="12dp"
        android:text="@string/gender" />


</RelativeLayout>
